fix(title): 🐛 fix logo alignment

--- a/themes/silencioenlasala-theme/assets/css/main.css
+++ b/themes/silencioenlasala-theme/assets/css/main.css
@@ -187,7 +187,8 @@ footer {
     flex-direction: row;
   }
   .title {
-    justify-content: start;
+    justify-content: center;
+    align-items: center;
   }
 
   header {
